# asertu-optimizer-python

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  contract-check.yml  publish.yml  smoke.yml
docs/: README.md  api-reference.md  architecture.md  async-and-instrumentation.md  authentication.md  contract-testing.md  deployment-patterns.md  development.md  getting-started.md  provider-compatibility.md  public-api.md  stability-policy.md
example/: README.md  anthropic_workflow.py  async_playground.py  bedrock_workflow.py  openai_workflow.py  playground.py  workspace_billing_workflow.py
examples/: list_tenants.py  track_event.py
examples/quickstart/: .env.example  README.md  read_analytics.py  requirements.txt  track_event.py
scripts/: smoke_check.py
src/asertu/optimizer/: __init__.py  client.py
src/asertu_optimizer/: __init__.py  async_client.py  async_http_client.py  auth.py  client.py  config.py  exceptions.py  http_client.py  instrumentation.py  telemetry.py
src/asertu_optimizer/async_resources/: __init__.py  analytics.py  base.py  billing.py  events.py  history.py  pricing.py  settings.py  tenants.py
src/asertu_optimizer/models/: __init__.py  analytics.py  billing.py  common.py  events.py  history.py  pricing.py  settings.py  tenants.py
src/asertu_optimizer/resources/: __init__.py  analytics.py  base.py  billing.py  events.py  history.py  pricing.py  settings.py  tenants.py
tests/: test_client.py  test_import.py  test_openapi_contract.py  test_public_api.py
