[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "asertu-optimizer"
version = "0.1.0"
description = "Official Python SDK for asertu Optimizer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "asertu", email = "dev@asertu.ai" }
]
keywords = ["asertu", "optimizer", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://asertu.ai"
Repository = "https://github.com/asertuplatform/asertu-optimizer-python"
Documentation = "https://github.com/asertuplatform/asertu-optimizer-python#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/asertu"]
