[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "asertu-optimizer"
version = "2.0.4"
description = "Official Python SDK for Asertu Optimizer AI observability."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Asertu", email = "dev@asertu.ai" }
]
keywords = [
  "asertu",
  "optimizer",
  "sdk",
  "ai-observability",
  "llm",
  "openai",
  "anthropic",
  "bedrock"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring"
]
dependencies = [
  "httpx>=0.27,<1.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "PyYAML>=6.0",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "types-PyYAML>=6.0"
]

[project.urls]
Homepage = "https://asertu.ai"
Repository = "https://github.com/asertuplatform/asertu-optimizer-python"
Documentation = "https://optimizer.dev.asertu.ai/swagger/index.html"
Issues = "https://github.com/asertuplatform/asertu-optimizer-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/asertu_optimizer"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/example",
  "/docs",
  "/MIGRATION.md",
  "/CHANGELOG.md",
  "/README.md",
  "/ROADMAP.md",
  "/LICENSE",
  "/pyproject.toml"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
packages = ["asertu_optimizer"]
